# bevy_platformer

./: Cargo.toml
assets/: world.ldtk
assets/tilesets/: base.aseprite
docs/: notes.md
examples/: raycasting.rs
src/: game.rs  level.rs  lib.rs  main.rs  menu.rs  physics.rs  player.rs  player_controller.rs
src/game/: mod.rs  player_controller.rs  world.rs
