[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_ecs = "0.18.1"
rand = "0.10.0"
avian2d = "0.6"
bevy-inspector-egui = "0.36.0"
bevy_ecs_ldtk = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

